@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-12T01:01:33Z",
+  "timestamp" : "2022-05-12T08:14:41Z",
   "count_outdated" : 264,
   "uniques_outdated" : 130,
-  "count" : 295,
-  "uniques" : 153,
+  "count" : 296,
+  "uniques" : 154,
   "clones" : [
     {
       "timestamp": "2022-05-01T00:00:00Z",
@@ -67,6 +67,13 @@
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-05-12T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 0, 1 ]
     }
   ]
 }
