@@ -1,5 +1,5 @@
 {
-  "count": 31,
+  "count": 32,
   "uniques": 14,
   "clones": [
     {
@@ -45,6 +45,11 @@
     {
       "timestamp": "2022-05-11T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-05-12T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
