@@ -1,3 +1,9 @@
+2022-05-12T08:14:41Z:
+* notice: last 14d: all unq: 32 14
+* notice: prev accum: outdated-all outdated-unq / all unq: 264 130 / 295 153
+* notice: next accum: outdated-all outdated-unq / all unq: 264 130 / 296 154
+* notice: prev json diff / prev day diff: unq all: +1 +1 -0 -0 / +1 +2 -0 -0
+
 2022-05-12T01:01:33Z:
 * notice: last 14d: all unq: 31 14
 * notice: prev accum: outdated-all outdated-unq / all unq: 264 130 / 294 153
